# satnogs-telemetry

./: .gitignore  .gitmodules  README.md  config.example.toml  config.toml  pyproject.toml
decoders/98386/: .buildinfo.json  cosmo.py
scripts/: init_submodule.sh
src/satnogs_telemetry/: __init__.py  cli.py  config.py  csv_export.py  database.py  db.py  decode.py  decoder_catalog.py  decoder_manager.py  download.py  ingest.py  interactive_mapping.py  models.py  parser.py  plotting.py  satnogs_client.py  utils.py
