[tool.poetry]
name = "satnogs-telemetry"
version = "0.2.0"
description = "Headless SatNOGS telemetry downloader, decoder, SQLite store, plotter, and CSV exporter"
authors = ["OpenAI <support@openai.com>"]
readme = "README.md"
packages = [{ include = "satnogs_telemetry", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = ">=2.32,<3.0"
matplotlib = ">=3.8,<4.0"
kaitaistruct = ">=0.10,<0.12"
tomli-w = "^1.2.0"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
ruff = ">=0.11,<0.12"

[tool.poetry.scripts]
satnogs-telemetry = "satnogs_telemetry.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
